# SPDX-FileCopyrightText: 2024 Luflosi <zonegen@luflosi.de>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "zonegen"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-write-file = { version = "0.2", features = ["unnamed-tmpfile"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
futures = "0.3"
indoc = "2.0"
nom = "8.0"
nom-language = "0.1"
rustyline = "15.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tldextract = { git = "https://github.com/dovahcrow/tldextract-rs.git" }
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
doc_markdown = "allow"
enum_glob_use = "warn"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
